Switch to virtual threads